Added Version Ref
Added Version Ref

--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -8,6 +8,6 @@ on:
 
 jobs:
   update_release_draft:
-    uses: deepworks-net/github.actions/.github/workflows/release-drafter.yml@main
+    uses: deepworks-net/github.actions/.github/workflows/release-drafter.yml@v1.0.103
     with:
       config-path: .github/release-drafter.yml
