--- a/.github/workflows/mkdocs-gh-pages.yml
+++ b/.github/workflows/mkdocs-gh-pages.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: 
       - main
-      
+
 jobs:
   deploy_gh_pages:
-    uses: deepworks-net/github.actions/.github/workflows/mkdocs-gh-pages.yml@main
+    uses: deepworks-net/github.actions/.github/workflows/mkdocs-gh-pages.yml@v1.0.103
