--- a/.github/workflows/update-changelog.yml
+++ b/.github/workflows/update-changelog.yml
@@ -8,6 +8,4 @@ on:
 
 jobs:
   update_changelog:
-    uses: deepworks-net/github.actions/.github/workflows/update-changelog.yml@main
-    with:
-      config-path: .github/release-drafter.yml
+    uses: deepworks-net/github.actions/.github/workflows/update-changelog.yml@v1.0.103
